# parallel_string_match

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.sh
include/: kmp_matcher.h  parallel_matcher.h  string_matcher.h
src/: CMakeLists.txt  kmp_matcher.cpp  main.cpp  parallel_matcher.cpp
tests/: CMakeLists.txt  main.cpp
